<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ABCDict</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="username">用户名</string>
    <string name="password">密    码</string>
    <string name="login">登录</string>
    <string name="exit">退出</string>
    <string name="title">单词录入</string>
    <string name="wordshow">单词查看</string>
    <string name="btninsert">添加</string>
    <string name="btnSave">保存</string>
    <string name="btnsearch">查看</string>
    <string name="btnupdate">更新</string>
    <string name="btndelete">删除</string>
    <string name="word">单词：</string>
    <string name="detail">解析：</string>
    <string name="btnprior">前一条</string>
    <string name="btnnext">后一条</string>
    <string name="editWord">编辑单词</string>
    <string name="updateword">单词重新 下载</string>
    <string name="loginlable">用户登录</string>
    <string name="registlable">用户注册</string>

</resources>